docs/api/qiskit/0.24/qiskit.qobj.QobjMeasurementOption.mdx
---
title: QobjMeasurementOption (v0.24)
description: API reference for qiskit.qobj.QobjMeasurementOption in qiskit v0.24
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.QobjMeasurementOption
---

<span id="qiskit-qobj-qobjmeasurementoption" />

# qiskit.qobj.QobjMeasurementOption

<Class id="qiskit.qobj.QobjMeasurementOption" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/qobj/pulse_qobj.py" signature="QobjMeasurementOption(name, params=None)" modifiers="class">
  An individual measurement option.

  Instantiate a new QobjMeasurementOption object.

  **Parameters**

  *   **name** (*str*) – The name of the measurement option
  *   **params** (*list*) – The parameters of the measurement option.

  ### \_\_init\_\_

  <Function id="qiskit.qobj.QobjMeasurementOption.__init__" signature="__init__(name, params=None)">
    Instantiate a new QobjMeasurementOption object.

    **Parameters**

    *   **name** (*str*) – The name of the measurement option
    *   **params** (*list*) – The parameters of the measurement option.
  </Function>

  ## Methods

  |                                                                                                                         |                                                                   |
  | ----------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------- |
  | [`__init__`](#qiskit.qobj.QobjMeasurementOption.__init__ "qiskit.qobj.QobjMeasurementOption.__init__")(name\[, params]) | Instantiate a new QobjMeasurementOption object.                   |
  | [`from_dict`](#qiskit.qobj.QobjMeasurementOption.from_dict "qiskit.qobj.QobjMeasurementOption.from_dict")(data)         | Create a new QobjMeasurementOption object from a dictionary.      |
  | [`to_dict`](#qiskit.qobj.QobjMeasurementOption.to_dict "qiskit.qobj.QobjMeasurementOption.to_dict")()                   | Return a dict format representation of the QobjMeasurementOption. |

  ### from\_dict

  <Function id="qiskit.qobj.QobjMeasurementOption.from_dict" signature="from_dict(data)" modifiers="classmethod">
    Create a new QobjMeasurementOption object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary for the experiment config

    **Returns**

    The object from the input dictionary.

    **Return type**

    [QobjMeasurementOption](#qiskit.qobj.QobjMeasurementOption "qiskit.qobj.QobjMeasurementOption")
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.QobjMeasurementOption.to_dict" signature="to_dict()">
    Return a dict format representation of the QobjMeasurementOption.

    **Returns**

    The dictionary form of the QasmMeasurementOption.

    **Return type**

    dict
  </Function>
</Class>

