docs/api/qiskit/1.2/qiskit.qobj.QobjMeasurementOption.mdx
---
title: QobjMeasurementOption (v1.2)
description: API reference for qiskit.qobj.QobjMeasurementOption in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.QobjMeasurementOption
---

# QobjMeasurementOption

<Class id="qiskit.qobj.QobjMeasurementOption" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L29-L79" signature="qiskit.qobj.QobjMeasurementOption(name, params=None)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")

  An individual measurement option.

  Instantiate a new QobjMeasurementOption object.

  <Admonition title="Deprecated since version 1.2" type="danger">
    The class `qiskit.qobj.pulse_qobj.QobjMeasurementOption` is deprecated as of qiskit 1.2. It will be removed in the 2.0 release. The Qobj class and related functionality are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires Qobj it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – The name of the measurement option
  *   **params** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")) – The parameters of the measurement option.

  ## Methods

  ### from\_dict

  <Function id="qiskit.qobj.QobjMeasurementOption.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L62-L73" signature="from_dict(data)" modifiers="classmethod">
    Create a new QobjMeasurementOption object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) – A dictionary for the experiment config

    **Returns**

    The object from the input dictionary.

    **Return type**

    [QobjMeasurementOption](#qiskit.qobj.QobjMeasurementOption "qiskit.qobj.QobjMeasurementOption")
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.QobjMeasurementOption.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L51-L60" signature="to_dict()">
    Return a dict format representation of the QobjMeasurementOption.

    **Returns**

    The dictionary form of the QasmMeasurementOption.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")
  </Function>
</Class>

